# ferris-focus

./: Cargo.toml  LICENSE  README.md  ferris-focus.desktop  installer.nsi
.github/workflows/: release.yml
src/: db.rs  main.rs  models.rs  notifications.rs  timer.rs  xp.rs
